--- a/index.html
+++ b/index.html
@@ -522,12 +522,13 @@
       <div class="row">
         <div class="col-lg-4 col-sm-8 mb-5 mb-lg-0 ">
           <!-- logo -->
-          <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/loav.png" alt="logo" style="width:120px;height:80px;"></a>
+          <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/loav.png" alt="logo" style="width:120px;height:75px;"></a>
           <ul class="list-unstyled">
-            <li class="mb-2">Amrutham Ventures Private Limited
-							Puthenveedu Building
-							7/164 A, Chirakkadavu East Post
-							Kanjirapally, Kottayam – 686520
+            <li class="mb-2">Amrutham Ventures Private Limited, 
+#7/164 A, 
+Puthenveedu Building, Chirakkadavu East Post, Kanjirapally, 
+Kottayam, Kerala, 
+India – 686520
 </li>
             <li class="mb-2"><a href="tel:+918921854584" style="color:#f4fff9;">+918921854584</a>
 </li>
@@ -538,18 +539,19 @@
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0 " >
           <h4 class="text-white mb-5">COMPANY</h4>
           <ul class="list-unstyled">
+               <li class="mb-3"><a class="text-color " href="index.html" style="color:#f4fff9;">Home</a></li>
             <li class="mb-3"><a class="text-color " href="about.html" style="color:#f4fff9;">About Us</a></li>
             <li class="mb-3"><a class="text-color " href="contact.html" style="color:#f4fff9;">Contact</a></li>
-            <li class="mb-3"><a class="text-color " href="#" style="color:#f4fff9;">Blog</a></li>
+           
           </ul>
         </div>
         <!-- links -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0 ">
           <h4 class="text-white mb-5">LINKS</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color " href="#" style="color:#f4fff9;">Clients</a></li>
-            <li class="mb-3"><a class="text-color " href="#" style="color:#f4fff9;">Brands</a></li>
-            <li class="mb-3"><a class="text-color " href="#" style="color:#f4fff9;">Business</a></li>
+            <li class="mb-3"><a class="text-color " href="blog.html" style="color:#f4fff9;">Product</a></li>
+            <li class="mb-3"><a class="text-color " href="events.html" style="color:#f4fff9;">Brands</a></li>
+            <li class="mb-3"><a class="text-color " href="courses.html" style="color:#f4fff9;">Business</a></li>
             
           </ul>
         </div>
