--- a/courses.html
+++ b/courses.html
@@ -178,8 +178,8 @@
           <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="courses.html">Our Business</a></li>
           <li class="list-inline-item text-white h3 font-secondary "></li>
         </ul>
-        <p  style="color:#b81a1a;">"AMRITHAM VENTURES" is as an endeavour to bring back the healthy practices in eating. It is a reaction towards chemicals and other similar ingredients in food. </p>
-        <p  style="color:#b81a1a;">"AMRITHAM VENTURES" is an attempt to bring international brands to India. They also plan to spread the goodness of Indian Spices in International Market.  </p>
+        <p  style="color:#b81a1a;">"AMRUTHAM VENTURES" is as an endeavour to bring back the healthy practices in eating. It is a reaction towards chemicals and other similar ingredients in food. </p>
+        <p  style="color:#b81a1a;">"AMRUTHAM VENTURES" is an attempt to bring international brands to India. They also plan to spread the goodness of Indian Spices in International Market.  </p>
       </div>
     </div>
   </div>
