--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CarServ - Car Repair HTML Template</title>
+    <title>Hook”N”Speed</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -88,13 +88,13 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu fade-up m-0">
-                        <a href="service.html" class="dropdown-item">Accident recovery </a>
-                        <a href="service.html" class="dropdown-item">Breakdown assistance </a>
-                        <a href="service.html" class="dropdown-item">Service center dropoff</a>
-                        <a href="service.html" class="dropdown-item">Vehicle logistics </a>
-                        <a href="service.html" class="dropdown-item">Long distance towing</a>
-                        <a href="service.html" class="dropdown-item">Flatbed car transportation </a>
-                        <a href="service.html" class="dropdown-item">Underlift car towing </a>
+                        <a href="service.html" class="dropdown-item">Accident Recovery </a>
+                        <a href="service.html" class="dropdown-item">Breakdown Assistance </a>
+                        <a href="service.html" class="dropdown-item">Service Center Dropoff</a>
+                        <a href="service.html" class="dropdown-item">Vehicle Logistics </a>
+                        <a href="service.html" class="dropdown-item">Long Distance Towing</a>
+                        <a href="service.html" class="dropdown-item">Flatbed Car Transportation </a>
+                        <a href="service.html" class="dropdown-item">Underlift Car Towing </a>
                         <a href="service.html" class="dropdown-item">Jump Start </a>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
         </div>
     </div>
     <!-- Page Header End -->
-
+    
 
     <!-- Service Start -->
     <div class="container-xxl py-5">
@@ -183,7 +183,13 @@
                     <h1 class="mb-4"><span class="text-primary">CarServ</span> Is The Best Place For Your Auto Care</h1>
                     <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
                     <div class="row g-4 mb-3 pb-3">
-                        <div class="col-12 wow fadeIn" data-wow-delay="0.1s">
+                        
+                    <p>Pellentesque convallis diam consequat magna vulputate malesuada. Cras a ornare elit. Nulla
+                        viverra pharetra sem, eget pulvinar neque pharetra ac.Lorem ipsum dolor sit amet, Ea
+                        consequuntur illum facere aperiam sequi optio consectetur.</p>
+                    <p>Lorem Ipsum convallis diam consequat magna vulputate malesuada. Cras a ornare elit. Nulla viverra
+                        pharetra sem, eget pulvinar neque pharetra ac.</p>
+                        <!--<div class="col-12 wow fadeIn" data-wow-delay="0.1s">
                             <div class="d-flex">
                                 <div class="bg-light d-flex flex-shrink-0 align-items-center justify-content-center mt-1" style="width: 45px; height: 45px;">
                                     <span class="fw-bold text-secondary">01</span>
@@ -215,7 +221,7 @@
                                     <span>Diam dolor diam ipsum sit amet diam et eos</span>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                     <a href="" class="btn btn-primary py-3 px-5">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                 </div>
