--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CarServ - Car Repair HTML Template</title>
+    <title>Hook”N”Speed</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -88,13 +88,13 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu fade-up m-0">
-                        <a href="service.html" class="dropdown-item">Accident recovery </a>
-                        <a href="service.html" class="dropdown-item">Breakdown assistance </a>
-                        <a href="service.html" class="dropdown-item">Service center dropoff</a>
-                        <a href="service.html" class="dropdown-item">Vehicle logistics </a>
-                        <a href="service.html" class="dropdown-item">Long distance towing</a>
-                        <a href="service.html" class="dropdown-item">Flatbed car transportation </a>
-                        <a href="service.html" class="dropdown-item">Underlift car towing </a>
+                        <a href="service.html" class="dropdown-item">Accident Recovery </a>
+                        <a href="service.html" class="dropdown-item">Breakdown Assistance </a>
+                        <a href="service.html" class="dropdown-item">Service Center Dropoff</a>
+                        <a href="service.html" class="dropdown-item">Vehicle Logistics </a>
+                        <a href="service.html" class="dropdown-item">Long Distance Towing</a>
+                        <a href="service.html" class="dropdown-item">Flatbed Car Transportation </a>
+                        <a href="service.html" class="dropdown-item">Underlift Car Towing </a>
                         <a href="service.html" class="dropdown-item">Jump Start </a>
                     </div>
                 </div>
@@ -111,12 +111,12 @@
     <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-bg-2.jpg);">
         <div class="container-fluid page-header-inner py-5">
             <div class="container text-center">
-                <h1 class="display-3 text-white mb-3 animated slideInDown">Services</h1>
+                <h1 class="display-3 text-white mb-3 animated slideInDown">Gallery</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center text-uppercase">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
                         <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Services</li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Gallery</li>
                     </ol>
                 </nav>
             </div>
@@ -136,64 +136,88 @@
                 <div class="team-item">
                     <div class="position-relative overflow-hidden">
                         <img class="img-fluid" src="img/team-1.jpg" alt="">
-                        <div class="team-overlay position-absolute start-0 top-0 w-100 h-100">
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
                         </div>
-                    </div>
-                    <div class="bg-light text-center p-4">
+                    <!--<div class="bg-light text-center p-4">
                         <h5 class="fw-bold mb-0"></h5>
                         <small></small>
-                    </div>
+                    </div>-->
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="team-item">
                     <div class="position-relative overflow-hidden">
                         <img class="img-fluid" src="img/team-2.jpg" alt="">
-                        <div class="team-overlay position-absolute start-0 top-0 w-100 h-100">
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
                         </div>
-                    </div>
-                    <div class="bg-light text-center p-4">
+                    <!--<div class="bg-light text-center p-4">
                         <h5 class="fw-bold mb-0"></h5>
                         <small></small>
-                    </div>
+                    </div>-->
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="team-item">
                     <div class="position-relative overflow-hidden">
                         <img class="img-fluid" src="img/team-3.jpg" alt="">
-                        <div class="team-overlay position-absolute start-0 top-0 w-100 h-100">
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
-                        </div>
-                    </div>
-                    <div class="bg-light text-center p-4">
+                       </div>
+                    <!--<div class="bg-light text-center p-4">
                         <h5 class="fw-bold mb-0"></h5>
                         <small></small>
-                    </div>
+                    </div>-->
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                 <div class="team-item">
                     <div class="position-relative overflow-hidden">
                         <img class="img-fluid" src="img/team-4.jpg" alt="">
-                        <div class="team-overlay position-absolute start-0 top-0 w-100 h-100">
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
-                        </div>
-                    </div>
-                    <div class="bg-light text-center p-4">
+                       </div>
+                    <!--<div class="bg-light text-center p-4">
                         <h5 class="fw-bold mb-0"></h5>
                         <small></small>
-                    </div>
+                    </div>-->
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="team-item">
+                    <div class="position-relative overflow-hidden">
+                        <img class="img-fluid" src="img/team-2.jpg" alt="">
+                        </div>
+                    <!--<div class="bg-light text-center p-4">
+                        <h5 class="fw-bold mb-0"></h5>
+                        <small></small>
+                    </div>-->
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="team-item">
+                    <div class="position-relative overflow-hidden">
+                        <img class="img-fluid" src="img/team-3.jpg" alt="">
+                       </div>
+                    <!--<div class="bg-light text-center p-4">
+                        <h5 class="fw-bold mb-0"></h5>
+                        <small></small>
+                    </div>-->
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="team-item">
+                    <div class="position-relative overflow-hidden">
+                        <img class="img-fluid" src="img/team-4.jpg" alt="">
+                        </div>
+                    <!--<div class="bg-light text-center p-4">
+                        <h5 class="fw-bold mb-0"></h5>
+                        <small></small>
+                    </div>-->
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                <div class="team-item">
+                    <div class="position-relative overflow-hidden">
+                        <img class="img-fluid" src="img/team-1.jpg" alt="">
+                       </div>
+                    <!--<div class="bg-light text-center p-4">
+                        <h5 class="fw-bold mb-0"></h5>
+                        <small></small>
+                    </div>-->
                 </div>
             </div>
         </div>
