--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CarServ - Car Repair HTML Template</title>
+    <title>Hook”N”Speed</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -88,13 +88,13 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu fade-up m-0">
-                        <a href="service.html" class="dropdown-item">Accident recovery </a>
-                        <a href="service.html" class="dropdown-item">Breakdown assistance </a>
-                        <a href="service.html" class="dropdown-item">Service center dropoff</a>
-                        <a href="service.html" class="dropdown-item">Vehicle logistics </a>
-                        <a href="service.html" class="dropdown-item">Long distance towing</a>
-                        <a href="service.html" class="dropdown-item">Flatbed car transportation </a>
-                        <a href="service.html" class="dropdown-item">Underlift car towing </a>
+                        <a href="service.html" class="dropdown-item">Accident Recovery </a>
+                        <a href="service.html" class="dropdown-item">Breakdown Assistance </a>
+                        <a href="service.html" class="dropdown-item">Service Center Dropoff</a>
+                        <a href="service.html" class="dropdown-item">Vehicle Logistics </a>
+                        <a href="service.html" class="dropdown-item">Long Distance Towing</a>
+                        <a href="service.html" class="dropdown-item">Flatbed Car Transportation </a>
+                        <a href="service.html" class="dropdown-item">Underlift Car Towing </a>
                         <a href="service.html" class="dropdown-item">Jump Start </a>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="wow fadeInUp" data-wow-delay="0.2s">
-                        <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                        <p class="mb-4"></p>
                         <form>
                             <div class="row g-3">
                                 <div class="col-md-6">
