--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CarServ - Car Repair HTML Template</title>
+    <title>Hook”N”Speed</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -88,13 +88,13 @@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Services</a>
                     <div class="dropdown-menu fade-up m-0">
-                        <a href="service.html" class="dropdown-item">Accident recovery </a>
-                        <a href="service.html" class="dropdown-item">Breakdown assistance </a>
-                        <a href="service.html" class="dropdown-item">Service center dropoff</a>
-                        <a href="service.html" class="dropdown-item">Vehicle logistics </a>
-                        <a href="service.html" class="dropdown-item">Long distance towing</a>
-                        <a href="service.html" class="dropdown-item">Flatbed car transportation </a>
-                        <a href="service.html" class="dropdown-item">Underlift car towing </a>
+                        <a href="service.html" class="dropdown-item">Accident Recovery </a>
+                        <a href="service.html" class="dropdown-item">Breakdown Assistance </a>
+                        <a href="service.html" class="dropdown-item">Service Center Dropoff</a>
+                        <a href="service.html" class="dropdown-item">Vehicle Logistics </a>
+                        <a href="service.html" class="dropdown-item">Long Distance Towing</a>
+                        <a href="service.html" class="dropdown-item">Flatbed Car Transportation </a>
+                        <a href="service.html" class="dropdown-item">Underlift Car Towing </a>
                         <a href="service.html" class="dropdown-item">Jump Start </a>
                     </div>
                 </div>
@@ -112,13 +112,13 @@
         <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-bg-1.jpg" alt="Image">
+                    <img class="w-100" src="img/1.avif" alt="Image">
                     <div class="carousel-caption d-flex align-items-center">
                         <div class="container">
                             <div class="row align-items-center justify-content-center justify-content-lg-start">
                                 <div class="col-10 col-lg-7 text-center text-lg-start">
                                     <h6 class="text-white text-uppercase mb-3 animated slideInDown">// Car Servicing //</h6>
-                                    <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Qualified Car Repair Service Center</h1>
+                                    <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Qualified Accident Recovery Service Center</h1>
                                     <a href="" class="btn btn-primary py-3 px-5 animated slideInDown">Learn More<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                                 <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
@@ -129,13 +129,13 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel-bg-2.jpg" alt="Image">
+                    <img class="w-100" src="img/tow.jpg" alt="Image">
                     <div class="carousel-caption d-flex align-items-center">
                         <div class="container">
                             <div class="row align-items-center justify-content-center justify-content-lg-start">
                                 <div class="col-10 col-lg-7 text-center text-lg-start">
                                     <h6 class="text-white text-uppercase mb-3 animated slideInDown">// Car Servicing //</h6>
-                                    <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Qualified Car Wash Service Center</h1>
+                                    <h1 class="display-3 text-white mb-4 pb-3 animated slideInDown">Qualified Car Towing Service Center</h1>
                                     <a href="" class="btn btn-primary py-3 px-5 animated slideInDown">Learn More<i class="fa fa-arrow-right ms-3"></i></a>
                                 </div>
                                 <div class="col-lg-5 d-none d-lg-flex animated zoomIn">
@@ -453,7 +453,7 @@
      Booking End -->
 
 
-    <!-- Team Start -->
+    <!-- Team Start 
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
@@ -528,7 +528,7 @@
             </div>
         </div>
     </div>
-    <!-- Team End -->
+     Team End -->
 
 
     <!-- Testimonial Start -->
